[package]
name = "smash-arc"
version = "0.2.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
binread = "1.4"
modular-bitfield = "0.10"
thiserror = "1"
crc32fast = "1.2"

zstd = { version = "0.5", optional = true }
ruzstd = { version = "=0.2.2", optional = true }

parking_lot = { version = "0.11", optional = true }
lazy_static = { version = "1.4", optional = true }

network-reader = { git = "https://github.com/jam1garner/network-reader.git", optional = true }

[features]
default = ["dir-listing", "network"]
network = ["network-reader"]
dir-listing = ["global-hashes"]
global-hashes = ["lazy_static", "parking_lot"]
smash-runtime = ["crc32fast/nightly"]

# Recommended for use on platforms it builds for
libzstd = ["zstd"]

# Increased portability (Recommended for use on switch)
rust-zstd = ["ruzstd"]

# If you really don't need zstd of any form
nozstd = []
